--- a/notebooks/skin_cancer_classification.ipynb
+++ b/notebooks/skin_cancer_classification.ipynb
@@ -407,8 +407,6 @@
       ],
       "source": [
         "# Mapping dx thành diagnosis\n",
-        "# Theo yêu cầu: không có mapping cụ thể trong đề, nhưng ta sẽ giữ nguyên dx\n",
-        "# và tạo cột diagnosis cho binary classification\n",
         "dx_dict = {\n",
         "    'bkl': 'benign_keratosis',\n",
         "    'nv': 'melanocytic_nevus',\n",
@@ -818,7 +816,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Đang huấn luyện mô hình SVM (Binary Classification)...\n",
+            "Đang huấn luyện mô hình SVM (Binary Classification)...\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Hoàn thành huấn luyện!\n"
           ]
         }
@@ -1122,13 +1126,7 @@
           "output_type": "stream",
           "text": [
             "Đang huấn luyện mô hình SVM (Multi-class Classification)...\n",
-            "Sử dụng class_weight='balanced' để xử lý class imbalance\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
+            "Sử dụng class_weight='balanced' để xử lý class imbalance\n",
             "Hoàn thành huấn luyện!\n"
           ]
         }
